# netconf

./: .gitignore  CONTRIBUTING.md  Makefile.am  README.md  bootstrap.sh  configure  configure.ac  create.ini  create.sh  setenv.sh
doc/: install-guide.md  operation-guide.md  setup-guide.md
doc/examples/: README.md  interfaces.xml  interfaces.yaml  interfaces_add_subif.xml  interfaces_add_subif.yaml  network-instance-mic.xml  network-instance-mic.yaml  network-instance-mic_add_ifaces.xml  network-instance-mic_add_ifaces.yaml  network-instance-mic_add_protos.xml  network-instance-mic_add_protos.yaml  network-instance-vrf10.xml  network-instance-vrf10.yaml  network-instance-vrf10_del_iface.xml  network-instance-vrf10_no_iface.yaml  routing-policy.xml
doc/examples-ipv6/: README.md  clear-interfaces.xml  clear-network-instance.xml  clear-routing-policy.xml  interfaces.xml  interfaces.yaml  interfaces_add_subif.xml  interfaces_add_subif.yaml  network-instance.xml  network-instance.yaml  network-instance_add_ifaces.xml  network-instance_add_ifaces.yaml  network-instance_add_protos.xml  network-instance_add_protos.yaml  routing-policy.xml  routing-policy.yaml
etc/config/: ncmd.conf  ncmd.toml  ncmi.conf
etc/lxcinit/std_mic/: lxcinit.sh
etc/lxcinit/std_ric/: lxcinit.sh
etc/lxcinit/vpn_mic/: lxcinit.sh
etc/lxcinit/vpn_ric/: lxcinit.sh
etc/openconfig/: beluganos-bgp-common-multiprotocol.yang  beluganos-bgp-common.yang  beluganos-bgp-global.yang  beluganos-bgp-neighbor.yang  beluganos-bgp-policy.txt  beluganos-bgp-policy.xml  beluganos-bgp-policy.yang  beluganos-bgp-zebra.yang  beluganos-bgp.txt  beluganos-bgp.xml  beluganos-bgp.yang  beluganos-if-ethernet.txt  beluganos-if-ethernet.yang  beluganos-if-ip.txt  beluganos-if-ip.yang  beluganos-interfaces.txt  beluganos-interfaces.xml  beluganos-interfaces.yang  beluganos-local-routing.yang  beluganos-mpls-ldp.yang  beluganos-mpls.txt  beluganos-mpls.xml  beluganos-mpls.yang  beluganos-network-instance.txt  beluganos-network-instance.xml  beluganos-network-instance.yang  beluganos-ospfv2-area-interface.yang  beluganos-ospfv2-area.yang  beluganos-ospfv2-global.yang  beluganos-ospfv2.yang  beluganos-ospfv3-area-interface.yang  beluganos-ospfv3-area-range.yang  beluganos-ospfv3-area.yang  beluganos-ospfv3-global.yang  beluganos-ospfv3.yang  beluganos-routing-policy.txt  beluganos-routing-policy.xml  beluganos-routing-policy.yang  reload.sh
etc/sysrepo/: netopeer2-server.service  sr_install.sh
etc/systemd/: ncm.target  ncmd.service  ncmi.service  ncms.service
etc/test/: ncm.conf  ncmall.sh  ncmd.sh  ncmi.sh  ncms.sh  nop2.sh  srcfg.sh  srd.sh
etc/test/xml/: beluganos-interfaces-0-0.xml  beluganos-interfaces-1-0.xml  beluganos-interfaces-1-1-mtu.xml  beluganos-interfaces-1-1-v6.xml  beluganos-interfaces-1-1.xml  beluganos-interfaces-1-2-v6.xml  beluganos-interfaces-1-2.xml  beluganos-interfaces-2-0.xml  beluganos-interfaces-2-1-v6.xml  beluganos-interfaces-2-1.xml  beluganos-interfaces-2-2-v6.xml  beluganos-interfaces-2-2.xml  beluganos-interfaces-st.xml  beluganos-interfaces-st.yaml  beluganos-network-instance-0.xml  beluganos-network-instance-1-if-bgp-0.xml  beluganos-network-instance-1-if-bgp-1-v6.xml  beluganos-network-instance-1-if-bgp-1.xml  beluganos-network-instance-1-if-bgp-zebra.xml  beluganos-network-instance-1-if-mpls-ldp-if.xml  beluganos-network-instance-1-if-mpls-ldp.xml  beluganos-network-instance-1-if-mpls.xml  (+27 more)
src/: Makefile.am  setup.md  setup.py
src/beluganos/: __init__.py
src/netconf/: Makefile.am
src/netconf/app/cfg/api/: Makefile.am  rpcapi.go  rpcapi.pb.go  rpcapi.proto  rpcapi_pb2.py  rpcapi_pb2_grpc.py  rpccmd.go
(+295 files in other folders)
